test methods re-added

--- a/AutomationFramework/test-output/old/Default suite/classes.html
+++ b/AutomationFramework/test-output/old/Default suite/classes.html
@@ -4,14 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>ebayTests.ExpandElementsTest</td>
+<td>ebayTests.ElementTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>register</td>
+<td>hgAndCollectibles</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>SpotlightTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>motorsAndFashion</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>hgAndSportingGoods</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>fashionAndElectronics</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
