--- a/AutomationFramework/test-output/old/Default suite/methods.html
+++ b/AutomationFramework/test-output/old/Default suite/methods.html
@@ -1,6 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d68a6">  <td>22/03/20 21:37:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpandElementsTest.register()[pri:0, instance:ebayTests.ExpandElementsTest@3af9aa66]">register</td> 
-  <td>main@2021835850</td>   <td></td> </tr>
+<tr bgcolor="7d68a6">  <td>22/03/21 17:16:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ElementTests.SpotlightTest()[pri:0, instance:ebayTests.ElementTests@6826c41e]">SpotlightTest</td> 
+  <td>main@1345293143</td>   <td></td> </tr>
+<tr bgcolor="7d68a6">  <td>22/03/21 17:16:20</td>   <td>67</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ElementTests.fashionAndElectronics()[pri:0, instance:ebayTests.ElementTests@6826c41e]">fashionAndElectronics</td> 
+  <td>main@1345293143</td>   <td></td> </tr>
+<tr bgcolor="7d68a6">  <td>22/03/21 17:16:25</td>   <td>5392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ElementTests.hgAndCollectibles()[pri:0, instance:ebayTests.ElementTests@6826c41e]">hgAndCollectibles</td> 
+  <td>main@1345293143</td>   <td></td> </tr>
+<tr bgcolor="7d68a6">  <td>22/03/21 17:16:28</td>   <td>8368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ElementTests.hgAndSportingGoods()[pri:0, instance:ebayTests.ElementTests@6826c41e]">hgAndSportingGoods</td> 
+  <td>main@1345293143</td>   <td></td> </tr>
+<tr bgcolor="7d68a6">  <td>22/03/21 17:16:33</td>   <td>13064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ElementTests.motorsAndFashion()[pri:0, instance:ebayTests.ElementTests@6826c41e]">motorsAndFashion</td> 
+  <td>main@1345293143</td>   <td></td> </tr>
 </table>
