--- a/TargetAutomation/test-output/index.html
+++ b/TargetAutomation/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\catni\AppData\Local\Temp\testng-eclipse--2088349916\testng-customsuite.xml</span>
+                    <span>C:\Users\catni\AppData\Local\Temp\testng-eclipse--1213294743\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -105,6 +105,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="targetTests.HomePageTest" class="method navigator-link" hash-for-method="Search">Search</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="targetTests.HomePageTest" class="method navigator-link" hash-for-method="writeResults">writeResults</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,12 +137,19 @@
                   <span class="method-name">Search</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="writeResults">
+                  </a> <!-- writeResults -->
+                  <span class="method-name">writeResults</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\catni\AppData\Local\Temp\testng-eclipse--2088349916\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\catni\AppData\Local\Temp\testng-eclipse--1213294743\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,11 +198,15 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Search')
+data.setCell(0, 1, 'writeResults')
 data.setCell(0, 2, 'targetTests.HomePageTest')
-data.setCell(0, 3, 61097);
+data.setCell(0, 3, 60406);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Search')
+data.setCell(1, 2, 'targetTests.HomePageTest')
+data.setCell(1, 3, 863);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -225,6 +241,10 @@ return data;
               <div class="test-method">
                 <span class="method-name">Search</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">writeResults</span>
+                <span class="method-start">866 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
