--- a/TargetAutomation/test-output/old/Default suite/classes.html
+++ b/TargetAutomation/test-output/old/Default suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>writeResults</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>Search</td>
 <td>&nbsp;</td></tr>
 <tr>
