--- a/TargetAutomation/test-output/old/Default suite/methods.html
+++ b/TargetAutomation/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a17273">  <td>22/03/17 23:45:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.Search()[pri:0, instance:targetTests.HomePageTest@4925f4f5]">Search</td> 
-  <td>main@1091736037</td>   <td></td> </tr>
+<tr bgcolor="a17273">  <td>22/03/22 01:15:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.writeResults()[pri:0, instance:targetTests.HomePageTest@1ad926d3]">writeResults</td> 
+  <td>main@1923810797</td>   <td></td> </tr>
+<tr bgcolor="a17273">  <td>22/03/22 01:15:18</td>   <td>-867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.Search()[pri:0, instance:targetTests.HomePageTest@1ad926d3]">Search</td> 
+  <td>main@1923810797</td>   <td></td> </tr>
 </table>
